generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum GoalPriority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

enum GoalStatus {
  NOT_STARTED
  IN_PROGRESS
  COMPLETED
  PAUSED
  CANCELLED
}

model User {
  id            String    @id @default(cuid())
  name          String?
  email         String?   @unique
  emailVerified DateTime? @map("email_verified")
  image         String?
  passwordHash  String?   @map("password_hash")
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  accounts   Account[]
  sessions   Session[]
  goals      Goal[]
  categories Category[]

  @@index([email])
  @@map("users")
}

model Account {
  id                String  @id @default(cuid())
  userId            String  @map("user_id")
  type              String
  provider          String
  providerAccountId String  @map("provider_account_id")
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@index([userId])
  @@map("accounts")
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique @map("session_token")
  userId       String   @map("user_id")
  expires      DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([expires])
  @@map("sessions")
}

model VerificationToken {
  identifier String
  token      String
  expires    DateTime

  @@unique([identifier, token])
  @@index([expires])
  @@map("verification_tokens")
}

model Category {
  id        String   @id @default(cuid())
  name      String
  color     String
  icon      String?
  userId    String   @map("user_id")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  user  User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  goals Goal[]

  @@unique([userId, name])
  @@index([userId])
  @@map("categories")
}

model Goal {
  id           String       @id @default(cuid())
  title        String
  description  String?      @db.Text
  categoryId   String?      @map("category_id")
  priority     GoalPriority @default(MEDIUM)
  deadline     DateTime?
  status       GoalStatus   @default(NOT_STARTED)
  targetValue  Float?       @map("target_value")
  currentValue Float        @default(0) @map("current_value")
  unit         String?
  userId       String       @map("user_id")
  createdAt    DateTime     @default(now()) @map("created_at")
  updatedAt    DateTime     @updatedAt @map("updated_at")

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  category     Category?     @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  milestones   Milestone[]
  progressLogs ProgressLog[]

  @@index([userId])
  @@index([categoryId])
  @@index([status])
  @@index([priority])
  @@index([deadline])
  @@index([createdAt])
  @@map("goals")
}

model Milestone {
  id        String    @id @default(cuid())
  title     String
  completed Boolean   @default(false)
  dueDate   DateTime? @map("due_date")
  goalId    String    @map("goal_id")
  order     Int       @default(0)
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")

  goal Goal @relation(fields: [goalId], references: [id], onDelete: Cascade)

  @@unique([goalId, order])
  @@index([goalId])
  @@index([completed])
  @@index([dueDate])
  @@map("milestones")
}

model ProgressLog {
  id        String   @id @default(cuid())
  goalId    String   @map("goal_id")
  value     Float
  note      String?  @db.Text
  date      DateTime @default(now())
  createdAt DateTime @default(now()) @map("created_at")

  goal Goal @relation(fields: [goalId], references: [id], onDelete: Cascade)

  @@index([goalId])
  @@index([date])
  @@map("progress_logs")
}
